--- a/web/package.json
+++ b/web/package.json
@@ -15,14 +15,20 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stomp/stompjs": "^7.0.0",
     "@toolpad/core": "^0.9.0",
+    "@types/stompjs": "^2.3.9",
     "axios": "^1.7.7",
     "cookies-ts": "^1.0.5",
+    "net": "^1.0.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-use-websocket": "^3.0.0",
+    "socket.io-client": "^4.8.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
