--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  session:
+    jdbc:
+      table-name: SPRING_SESSION
+      initialize-schema: always
 #    show-sql: true
 springdoc:
   swagger-ui:
