--- a/logger/src/main/resources/application.yml
+++ b/logger/src/main/resources/application.yml
@@ -1,5 +1,20 @@
 spring:
 
+  kafka:
+    bootstrap-servers: localhost:9093
+    consumer:
+      group-id: logger
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: '*'
+    listener:
+      concurrency: 3
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+  
   application:
     name: logger
 
