--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,8 +10,7 @@
     </parent>
     <groupId>com.xpm</groupId>
     <artifactId>server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>messenger</name>
+    <name>server</name>
     <description>messenger</description>
     <url/>
     <scm>
@@ -172,7 +171,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.baeldung.spring.kafka.KafkaApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
